--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node index.js"
   },
   "author": "Manav Garg",
   "license": "ISC"
